# franc

./: .env  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  RUNNING_APP.md  docker-compose.yml  pyproject.toml  tasks.py
.github/workflows/: main.yml
docs/: developer-guide.md  kafka-integration.md  user-guide.md
examples/: workflow_patterns.py
src/: __init__.py  form_utils.py  help_loader.py  infrahub.py  kafka_events_helper.py  kafka_integration.py  main.py  schema_protocols.py  task_simulator.py  utils.py  validation.py  workflow_engine.py
src/help/: connect-device-instructions.md  connect-device.md  connection-next-steps.md  dc-next-steps.md  deploy-dc-instructions.md  deploy-dc.md  deploy-network-segment.md  deploy-pop-instructions.md  deploy-pop.md  interface-config.md  pop-next-steps.md  quick-help.md  validation-tips.md
src/services/: __init__.py  connect_device.py  deploy_dc.py  deploy_network.py  deploy_pop.py
tests/: __init__.py  conftest.py  test_help_loader.py  test_kafka_integration.py  test_simple_structures.py  test_utils.py  test_utils.py.skip  test_validation.py  test_workflow_engine.py
