[project]
name = "franc"
version = "0.1.0"
description = "Streamlit connection and utilities for Infrahub"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "infrahub-sdk>=1.11.0",
    "polars[pandas]>=1.27.1",
    "pydantic>=2.5.0",
    "streamlit>=1.44.1",
]

[dependency-groups]
dev = [
    "invoke>=2.2.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "rich>=14.0.0",
    "ruff>=0.11.8",
    "yamllint>=1.37.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = []
addopts = "-vs"

[tool.mypy]
pretty = true
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 120

exclude = [
    ".git",
    ".venv",
    "env",
    "_build",
    "build",
    "dist",
    "examples",
]


[tool.ruff.lint]
preview = true

task-tags = ["FIXME", "TODO"]

select = ["ALL"]

ignore = [
    "COM812",  # Conflicts with formatter
    "D203",   # Incompatible with D211 (blank line before class)
    "D213",   # Incompatible with D212 (multi-line summary style)
    "B008", # To be fixed later
    "TRY002", # To be fixed later
]

[tool.ruff.lint.per-file-ignores]
"src/schema_protocols.py" = ["D101"]
"tests/**/*.py" = [
    "S101",   # Use of assert (normal in pytest)
    "PLR0913", # Too many arguments (common in test fixtures)
    "PLR6301", # Method could be a function (common in test classes)
    "ANN001",  # Missing type annotation for function argument
    "ANN201",  # Missing return type annotation
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used in comparison
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "PLR0124", # Name compared with itself
    "SLF001",  # Private member accessed
    "DOC201",
    "CPY001",
]


#https://docs.astral.sh/ruff/formatter/black/
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["streamlit_infrahub"]

[tool.ruff.lint.pycodestyle]
max-line-length = 150
